# video-screensaver

./: CMakeLists.txt  README.md  evrdefs.h  main.c  mfgw.c  mfisvc.h  playback.c  playback.h  scrnsave.c  video.c  video.h
